// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Statistic /> should match the default snapshot 1`] = `
<div
  className="css-flq1iw"
  data-qa="keyworker-stat"
>
  <h2
    className="css-103b8kb"
  >
    Unknown statistic
  </h2>
  <strong
    className="css-uyt74n"
    data-qa="-value"
  >
    -
  </strong>
  <p
    className="css-1umua3x"
  >
    no change since last period
  </p>
</div>
`;

exports[`<Statistic /> with negative change value should match the negative change snapshot 1`] = `
<div
  className="css-flq1iw"
  data-qa="keyworker-stat"
>
  <h2
    className="css-103b8kb"
  >
    A statistic with a negative change
  </h2>
  <strong
    className="css-uyt74n"
    data-qa="statWithNegativeChange-value"
  >
    0
  </strong>
  <p
    className="css-1umua3x"
  >
    -1
    <img
      alt="decrease"
      height={20}
      src="/images/icon-decrease.png"
      width={20}
    />
    since last week
  </p>
</div>
`;

exports[`<Statistic /> with no change in value over the change period should match the no change snapshot 1`] = `
<div
  className="css-flq1iw"
  data-qa="keyworker-stat"
>
  <h2
    className="css-103b8kb"
  >
    A statistic with no change over the change period
  </h2>
  <strong
    className="css-uyt74n"
    data-qa="statWithNoChange-value"
  >
    1
  </strong>
  <p
    className="css-1umua3x"
  >
    no change since last week
  </p>
</div>
`;

exports[`<Statistic /> with percentages should decorate the value with a percent 1`] = `
<div
  className="css-flq1iw"
  data-qa="keyworker-stat"
>
  <h2
    className="css-103b8kb"
  >
    A statistic with a percentage
  </h2>
  <strong
    className="css-uyt74n"
    data-qa="stateWithPercentageValue-value"
  >
    5%
  </strong>
  <p
    className="css-1umua3x"
  >
    no change since last week
  </p>
</div>
`;

exports[`<Statistic /> with positive change value should match the positive change snapshot 1`] = `
<div
  className="css-flq1iw"
  data-qa="keyworker-stat"
>
  <h2
    className="css-103b8kb"
  >
    A statistic with a positive change
  </h2>
  <strong
    className="css-uyt74n"
    data-qa="statWithPositiveChange-value"
  >
    2
  </strong>
  <p
    className="css-1umua3x"
  >
    +
    1
    <img
      alt="increase"
      height={20}
      src="/images/icon-increase.png"
      width={20}
    />
    since last week
  </p>
</div>
`;
